--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
             <img src="img/stul.png" alt="stul" width: 125px height: 166px;>
             <p>Парикмахерское кресло «Норм» гидравлическое</p>
             <h2>9 900 ₽ </h2>
-            <div class="btn">   <a href=""> Купить</a> </div>
+            <div class="btn"><a href=""> Купить</a> </div>
          </div>
     </section>
 </div>
     <div class="conterner">
         <div class="bottom">
-            <div class="box_bottom">
+            <div class="box_bottom flex">
+                <div>
                 <div class="titele_botom">
                     Получайте бонусы и подарки
                 </div>
@@ -105,21 +106,53 @@
                     Каждый месяц разыгрываем
 10 000 рублей для наших клиентов
                 </p>
-                <form action="email"></form>
+                <input type="email" placeholder="Введите e-mail" >
+            </div>
+                <div>
+                     <img src="/img/item.png" alt="email">
+                </div>
             </div>
             <div class="box_bottom">
                 <div class="titele_botom">
                     Заходите к нам
                 </div>
-                <p>
+                <p class="text2">
                     Более 300 магазинов
 по всей России
                 </p>
-                <form action="email"></form>
+                <a class="btnn" href="#">Карта магазинов</a>
             </div>
         </div>
     </div>
+    <footer>
+        <div class="conterner">
+           <div class="footer_top">
+                <ul class="footer_item">
+                    <li class="social-item"><a class="social-link Youtube" href="#" target="_blank"></a></li>
+                    <li class="social-item"><a class="social-link vk" href="#" target="_blank"></a></li>
+                    <li class="social-item"><a class="social-link fb" href="#" target="_blank"></a></li>
+                    <li class="social-item"><a class="social-link instagram" href="#" target="_blank"></a></li>   
+                </ul>
+                <p>198555, Невский пр. 140, офис 140</p>
+                <div class="kantakt flex ">
+                    <div class="nomer">
+                        <a href="tel:88121234567">8 (812) 123-45-67</a>
+                    </div>
+                 <div class="qayta_aloqa">
+                    <a href="">Обратный звонок</a> 
+                 </div>
+              </div>
+            </div>
+        </div>
+        <div class="footer_bottomm">
+         <div class="conterner">
+            <div class="footer_bottom">
+                <p>Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</p>
+                <a href="#">Политика конфиденциальности</a>
+            </div>
+            </div>
+         </div>
+    </footer>
     
-
 </body>
 </html>
